修正部分内容 - Java20 后推荐的新的 URL 构建方式 - 语言文件不正确问题